# p4dra

./: .gitignore  README-en.md  README.md
TNA/: README-en.MD  README.MD  control.sh  p4dra_class.py  receive.py  send.py
TNA/bfrt_python/: setup.py
TNA/p4src/common/: eg_parser.p4  egress.p4  headers.p4  ig_parser.p4  ingress.p4  types.p4
TNA/p4src/tofino/: p4dra.p4
data/: dados_experimento1  dados_experimento2  dados_experimento3-100_com_intervalos  dados_experimento3-250_requisicoes  dados_experimento4-acesso_memoria  dados_experimento4-calculo  dados_experimento4-verificacao  dados_experimento5
forro_cipher/: Makefile  README.md
forro_cipher/src/forro/: forro-args-dra.c  forro-args.c
optee_dra/: README-en.md  README.md  kea-ctrl-agent.conf  kea-dhcp4.json
optee_dra/dra/: Android.mk  CMakeLists.txt
optee_dra/dra/host/: Makefile  main.c
optee_dra/dra/ta/: Android.mk  Makefile  dra_ta.c  forro.c  sub.mk  user_ta_header_defines.h
optee_dra/dra_service/: Android.mk  CMakeLists.txt  Makefile
optee_dra/dra_service/host/: Makefile
optee_dra/optee-container/: Dockerfile  build.sh
optee_dra/scripts_auxiliares/: run_kea.sh  run_optee.sh  run_optee_build.sh  start_qemu.sh
tools/: Makefile  forro-args-dra2  forro-args-dra2-debug
tools/src/: envia_configuracoes_arquivo.c  envia_pacotes_pcap.c  envia_pedidos.c  envia_pedidos_host.c  envia_provas.c  envia_provas_arquivo.c  envia_setup_host_arquivo.c  gerar_provas.sh  gerar_provas2.sh  le_p4dra_rede.c  le_p4dra_rede_optee.c  le_provas_arquivo.c  le_provas_rede.c  verifica_p4dra_rede.c
(+19 files in other folders)
